# refs

.codesandbox/: tasks.json
.devcontainer/: devcontainer.json  setup.sh
codesandbox/.codesandbox/: tasks.json
cors-proxy/: bun.lockb  index.ts  package.json
docker/: compose.yml
github/.github/workflows/: docker-image-publish.yml
html/: sidebar.html
nginx/: default.conf
proxy/: Cargo.toml  Dockerfile
proxy/src/: main.rs
typescript/: package.json  tsconfig.json
vue/: sidebar-and-list.html
